--- a/TwoSafe/Properties/Resources.resx
+++ b/TwoSafe/Properties/Resources.resx
@@ -121,4 +121,22 @@
   <data name="green_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\green_icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="_64_close" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\64_close.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_64_refresh" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\64_refresh.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_64_settings" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\64_settings.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_2safeLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\2safeLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="refreshCaptcha" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\refreshCaptcha.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_64_download" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\64_download.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
