--- a/TwoSafe/View/WinFormStrings.resx
+++ b/TwoSafe/View/WinFormStrings.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="buttonText001" xml:space="preserve">
+    <value>Finish</value>
+  </data>
   <data name="error001" xml:space="preserve">
     <value>Not Autorize</value>
   </data>
@@ -368,5 +371,32 @@
   </data>
   <data name="error084" xml:space="preserve">
     <value>Invalid reset code</value>
+  </data>
+  <data name="error085" xml:space="preserve">
+    <value>Cannot connect to server</value>
+  </data>
+  <data name="message001" xml:space="preserve">
+    <value>Login successful</value>
+  </data>
+  <data name="message002" xml:space="preserve">
+    <value>Connecting...</value>
+  </data>
+  <data name="message003" xml:space="preserve">
+    <value>Sign up successful</value>
+  </data>
+  <data name="message004" xml:space="preserve">
+    <value>Passwords do not mach</value>
+  </data>
+  <data name="message005" xml:space="preserve">
+    <value>Folder </value>
+  </data>
+  <data name="message006" xml:space="preserve">
+    <value> already exists. Do you want to sync it with the cloud?</value>
+  </data>
+  <data name="message007" xml:space="preserve">
+    <value>Are you sure you want to end setup? This will cause application to quit.</value>
+  </data>
+  <data name="message008" xml:space="preserve">
+    <value>Confirm closing setup</value>
   </data>
 </root>
