--- a/TwoSafe/View/FormLogin.resx
+++ b/TwoSafe/View/FormLogin.resx
@@ -118,11 +118,14 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="tbAccount.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 9.75pt</value>
+  </data>
   <data name="tbAccount.Location" type="System.Drawing.Point, System.Drawing">
-    <value>83, 23</value>
+    <value>175, 91</value>
   </data>
   <data name="tbAccount.Size" type="System.Drawing.Size, System.Drawing">
-    <value>220, 20</value>
+    <value>205, 22</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="tbAccount.TabIndex" type="System.Int32, mscorlib">
@@ -135,25 +138,28 @@
     <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;tbAccount.Parent" xml:space="preserve">
-    <value>$this</value>
+    <value>panel1</value>
   </data>
   <data name="&gt;&gt;tbAccount.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>6</value>
   </data>
   <data name="labelAccount.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
+  <data name="labelAccount.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 9pt</value>
+  </data>
   <data name="labelAccount.Location" type="System.Drawing.Point, System.Drawing">
-    <value>30, 26</value>
+    <value>116, 93</value>
   </data>
   <data name="labelAccount.Size" type="System.Drawing.Size, System.Drawing">
-    <value>47, 13</value>
+    <value>53, 15</value>
   </data>
   <data name="labelAccount.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
   </data>
   <data name="labelAccount.Text" xml:space="preserve">
-    <value>Account</value>
+    <value>Account:</value>
   </data>
   <data name="&gt;&gt;labelAccount.Name" xml:space="preserve">
     <value>labelAccount</value>
@@ -162,19 +168,22 @@
     <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;labelAccount.Parent" xml:space="preserve">
-    <value>$this</value>
+    <value>panel1</value>
   </data>
   <data name="&gt;&gt;labelAccount.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>8</value>
+  </data>
+  <data name="tbPassword.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 9.75pt</value>
   </data>
   <data name="tbPassword.Location" type="System.Drawing.Point, System.Drawing">
-    <value>83, 49</value>
+    <value>175, 119</value>
   </data>
   <data name="tbPassword.PasswordChar" type="System.Char, mscorlib" xml:space="preserve">
     <value>*</value>
   </data>
   <data name="tbPassword.Size" type="System.Drawing.Size, System.Drawing">
-    <value>220, 20</value>
+    <value>205, 22</value>
   </data>
   <data name="tbPassword.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -186,25 +195,28 @@
     <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;tbPassword.Parent" xml:space="preserve">
-    <value>$this</value>
+    <value>panel1</value>
   </data>
   <data name="&gt;&gt;tbPassword.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>9</value>
   </data>
   <data name="labelPassowrd.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
+  <data name="labelPassowrd.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 9pt</value>
+  </data>
   <data name="labelPassowrd.Location" type="System.Drawing.Point, System.Drawing">
-    <value>24, 52</value>
+    <value>105, 119</value>
   </data>
   <data name="labelPassowrd.Size" type="System.Drawing.Size, System.Drawing">
-    <value>53, 13</value>
+    <value>64, 15</value>
   </data>
   <data name="labelPassowrd.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
   </data>
   <data name="labelPassowrd.Text" xml:space="preserve">
-    <value>Password</value>
+    <value>Password:</value>
   </data>
   <data name="&gt;&gt;labelPassowrd.Name" xml:space="preserve">
     <value>labelPassowrd</value>
@@ -213,13 +225,13 @@
     <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;labelPassowrd.Parent" xml:space="preserve">
-    <value>$this</value>
+    <value>panel1</value>
   </data>
   <data name="&gt;&gt;labelPassowrd.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>10</value>
   </data>
   <data name="buttonLogin.Location" type="System.Drawing.Point, System.Drawing">
-    <value>132, 87</value>
+    <value>430, 411</value>
   </data>
   <data name="buttonLogin.Size" type="System.Drawing.Size, System.Drawing">
     <value>75, 23</value>
@@ -246,7 +258,7 @@
     <value>True</value>
   </data>
   <data name="labelErrorMessage.Location" type="System.Drawing.Point, System.Drawing">
-    <value>80, 7</value>
+    <value>169, 75</value>
   </data>
   <data name="labelErrorMessage.Size" type="System.Drawing.Size, System.Drawing">
     <value>0, 13</value>
@@ -261,11 +273,229 @@
     <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;labelErrorMessage.Parent" xml:space="preserve">
-    <value>$this</value>
+    <value>panel1</value>
   </data>
   <data name="&gt;&gt;labelErrorMessage.ZOrder" xml:space="preserve">
+    <value>7</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="labelErrorMessageLogin.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
+    <value>Bottom</value>
+  </data>
+  <data name="labelErrorMessageLogin.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 9pt</value>
+  </data>
+  <data name="labelErrorMessageLogin.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="labelErrorMessageLogin.Location" type="System.Drawing.Point, System.Drawing">
+    <value>0, 371</value>
+  </data>
+  <data name="labelErrorMessageLogin.Size" type="System.Drawing.Size, System.Drawing">
+    <value>500, 29</value>
+  </data>
+  <data name="labelErrorMessageLogin.TabIndex" type="System.Int32, mscorlib">
+    <value>14</value>
+  </data>
+  <data name="labelErrorMessageLogin.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
+    <value>MiddleCenter</value>
+  </data>
+  <data name="&gt;&gt;labelErrorMessageLogin.Name" xml:space="preserve">
+    <value>labelErrorMessageLogin</value>
+  </data>
+  <data name="&gt;&gt;labelErrorMessageLogin.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;labelErrorMessageLogin.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;labelErrorMessageLogin.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
+  <data name="buttonRefreshCaptchaLogin.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
+    <value>Flat</value>
+  </data>
+  <data name="buttonRefreshCaptchaLogin.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAJiSURBVDhPrZXPS1RRFMdfZWFKFEILkQIXLmTsF9NmYOY5v38sZgRlhAyNNNpEKCK6KDdWaG7c
+        RNZGkHDdJugfaBUk6KJNmyBIrCBHRaVoXp/v4/mY0XF4iovDnXfvOZ/zveeee8ewLMs4bjsQGA6HayOR
+        yLVEItEbi8XGsYloNPoIuxWPx1urCdkH9fv9dYZhnCAwnEqlvmUyGSudTlv8dsdkMvmL9QUSX68EL4Oi
+        rB0lcwScz+fzpxiHsDlUPsBuo3pQ64xflQj4d8B3JKIUbkM1qUCcfzL+Nk3zUrXtsd5Msimgf7Edgcug
+        qg+wV9g/HCy+t3G66eXw8H1IWXaIWyXejTHYcg+LH7EiC9qSxVy3F6h82NkzlYLxLWJq7J2rdkBiZNwE
+        vMa4AnzMK5QaN+H/BTFrQNtsqJNtWKdMtmnAV7AbXqHyw39W8Yz9zhkZJzWplkFx52Fgu77E31cJUD1p
+        Q+nL00ifx4oojRwR2iVRxL9wlfLx+ihKs9lsndPP/Y7SKbemyB5zavL0MErZdg87fMn4DlFFxr5SqMni
+        H05xMRAINHgFcwYd2qHaUH0O9AkXo8U+fSbrUfvBqcugV6juPrAtYDYY+wHnsXv3WWQuuYkVvHaBehTg
+        iqP2E7Gmu/2S1hih4Lqu6yQZDYVCjZVUM39R70UulzsHdBn/hWAweHnXt+yV0jXTy0Tmgk4T8GcCZtTU
+        WBff91Cnnl6iY0Z9Pt8ZPZGcw9l9r9ReNepXnN8D3BC89D11fhdI8AYRFyrtpNrLX0Nt/SQYwJ6rsUk0
+        id3l91X150EHeuz/T0r0HwBz6ySEhl1VAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="buttonRefreshCaptchaLogin.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="buttonRefreshCaptchaLogin.Location" type="System.Drawing.Point, System.Drawing">
+    <value>354, 165</value>
+  </data>
+  <data name="buttonRefreshCaptchaLogin.Size" type="System.Drawing.Size, System.Drawing">
+    <value>30, 30</value>
+  </data>
+  <data name="buttonRefreshCaptchaLogin.TabIndex" type="System.Int32, mscorlib">
+    <value>13</value>
+  </data>
+  <data name="&gt;&gt;buttonRefreshCaptchaLogin.Name" xml:space="preserve">
+    <value>buttonRefreshCaptchaLogin</value>
+  </data>
+  <data name="&gt;&gt;buttonRefreshCaptchaLogin.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;buttonRefreshCaptchaLogin.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;buttonRefreshCaptchaLogin.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
+  <data name="labelCaptchaLogin.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="labelCaptchaLogin.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 9pt</value>
+  </data>
+  <data name="labelCaptchaLogin.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="labelCaptchaLogin.Location" type="System.Drawing.Point, System.Drawing">
+    <value>114, 227</value>
+  </data>
+  <data name="labelCaptchaLogin.Size" type="System.Drawing.Size, System.Drawing">
+    <value>55, 15</value>
+  </data>
+  <data name="labelCaptchaLogin.TabIndex" type="System.Int32, mscorlib">
+    <value>12</value>
+  </data>
+  <data name="labelCaptchaLogin.Text" xml:space="preserve">
+    <value>Captcha:</value>
+  </data>
+  <data name="&gt;&gt;labelCaptchaLogin.Name" xml:space="preserve">
+    <value>labelCaptchaLogin</value>
+  </data>
+  <data name="&gt;&gt;labelCaptchaLogin.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;labelCaptchaLogin.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;labelCaptchaLogin.ZOrder" xml:space="preserve">
+    <value>2</value>
+  </data>
+  <data name="textBoxCaptchaLogin.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 9.75pt</value>
+  </data>
+  <data name="textBoxCaptchaLogin.Location" type="System.Drawing.Point, System.Drawing">
+    <value>175, 225</value>
+  </data>
+  <data name="textBoxCaptchaLogin.Size" type="System.Drawing.Size, System.Drawing">
+    <value>205, 22</value>
+  </data>
+  <data name="textBoxCaptchaLogin.TabIndex" type="System.Int32, mscorlib">
+    <value>11</value>
+  </data>
+  <data name="&gt;&gt;textBoxCaptchaLogin.Name" xml:space="preserve">
+    <value>textBoxCaptchaLogin</value>
+  </data>
+  <data name="&gt;&gt;textBoxCaptchaLogin.Type" xml:space="preserve">
+    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;textBoxCaptchaLogin.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;textBoxCaptchaLogin.ZOrder" xml:space="preserve">
+    <value>3</value>
+  </data>
+  <data name="pictureBoxCaptchaLogin.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="pictureBoxCaptchaLogin.Location" type="System.Drawing.Point, System.Drawing">
+    <value>181, 154</value>
+  </data>
+  <data name="pictureBoxCaptchaLogin.Size" type="System.Drawing.Size, System.Drawing">
+    <value>164, 50</value>
+  </data>
+  <data name="pictureBoxCaptchaLogin.TabIndex" type="System.Int32, mscorlib">
+    <value>10</value>
+  </data>
+  <data name="&gt;&gt;pictureBoxCaptchaLogin.Name" xml:space="preserve">
+    <value>pictureBoxCaptchaLogin</value>
+  </data>
+  <data name="&gt;&gt;pictureBoxCaptchaLogin.Type" xml:space="preserve">
+    <value>System.Windows.Forms.PictureBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;pictureBoxCaptchaLogin.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;pictureBoxCaptchaLogin.ZOrder" xml:space="preserve">
+    <value>4</value>
+  </data>
+  <data name="labelLogIn.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 12pt, style=Bold</value>
+  </data>
+  <data name="labelLogIn.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="labelLogIn.Location" type="System.Drawing.Point, System.Drawing">
+    <value>3, 24</value>
+  </data>
+  <data name="labelLogIn.Size" type="System.Drawing.Size, System.Drawing">
+    <value>492, 30</value>
+  </data>
+  <data name="labelLogIn.TabIndex" type="System.Int32, mscorlib">
+    <value>6</value>
+  </data>
+  <data name="labelLogIn.Text" xml:space="preserve">
+    <value>2Safe Log in</value>
+  </data>
+  <data name="labelLogIn.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
+    <value>MiddleCenter</value>
+  </data>
+  <data name="&gt;&gt;labelLogIn.Name" xml:space="preserve">
+    <value>labelLogIn</value>
+  </data>
+  <data name="&gt;&gt;labelLogIn.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;labelLogIn.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;labelLogIn.ZOrder" xml:space="preserve">
+    <value>5</value>
+  </data>
+  <data name="panel1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>5, 5</value>
+  </data>
+  <data name="panel1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>500, 400</value>
+  </data>
+  <data name="panel1.TabIndex" type="System.Int32, mscorlib">
+    <value>6</value>
+  </data>
+  <data name="&gt;&gt;panel1.Name" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;panel1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;panel1.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;panel1.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
+  <metadata name="loginBW.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="getCaptchaBW.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>115, 17</value>
+  </metadata>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -273,10 +503,22 @@
     <value>6, 13</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>325, 134</value>
+    <value>509, 442</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Authorization</value>
+  </data>
+  <data name="&gt;&gt;loginBW.Name" xml:space="preserve">
+    <value>loginBW</value>
+  </data>
+  <data name="&gt;&gt;loginBW.Type" xml:space="preserve">
+    <value>System.ComponentModel.BackgroundWorker, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;getCaptchaBW.Name" xml:space="preserve">
+    <value>getCaptchaBW</value>
+  </data>
+  <data name="&gt;&gt;getCaptchaBW.Type" xml:space="preserve">
+    <value>System.ComponentModel.BackgroundWorker, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>FormLogin</value>
