--- a/TwoSafe/View/FormLogin.ru-RU.resx
+++ b/TwoSafe/View/FormLogin.ru-RU.resx
@@ -118,22 +118,41 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="labelAccount.Location" type="System.Drawing.Point, System.Drawing">
+    <value>125, 93</value>
+  </data>
   <data name="labelAccount.Size" type="System.Drawing.Size, System.Drawing">
-    <value>38, 13</value>
+    <value>44, 15</value>
   </data>
   <data name="labelAccount.Text" xml:space="preserve">
-    <value>Логин</value>
+    <value>Логин:</value>
+  </data>
+  <data name="labelPassowrd.Location" type="System.Drawing.Point, System.Drawing">
+    <value>115, 121</value>
   </data>
   <data name="labelPassowrd.Size" type="System.Drawing.Size, System.Drawing">
-    <value>45, 13</value>
+    <value>54, 15</value>
   </data>
   <data name="labelPassowrd.Text" xml:space="preserve">
-    <value>Пароль</value>
+    <value>Пароль:</value>
   </data>
-  <data name="buttonLogin.Text" xml:space="preserve">
-    <value>Войти</value>
+  <data name="buttonRefreshCaptchaLogin.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAJiSURBVDhPrZXPS1RRFMdfZWFKFEILkQIXLmTsF9NmYOY5v38sZgRlhAyNNNpEKCK6KDdWaG7c
+        RNZGkHDdJugfaBUk6KJNmyBIrCBHRaVoXp/v4/mY0XF4iovDnXfvOZ/zveeee8ewLMs4bjsQGA6HayOR
+        yLVEItEbi8XGsYloNPoIuxWPx1urCdkH9fv9dYZhnCAwnEqlvmUyGSudTlv8dsdkMvmL9QUSX68EL4Oi
+        rB0lcwScz+fzpxiHsDlUPsBuo3pQ64xflQj4d8B3JKIUbkM1qUCcfzL+Nk3zUrXtsd5Msimgf7Edgcug
+        qg+wV9g/HCy+t3G66eXw8H1IWXaIWyXejTHYcg+LH7EiC9qSxVy3F6h82NkzlYLxLWJq7J2rdkBiZNwE
+        vMa4AnzMK5QaN+H/BTFrQNtsqJNtWKdMtmnAV7AbXqHyw39W8Yz9zhkZJzWplkFx52Fgu77E31cJUD1p
+        Q+nL00ifx4oojRwR2iVRxL9wlfLx+ihKs9lsndPP/Y7SKbemyB5zavL0MErZdg87fMn4DlFFxr5SqMni
+        H05xMRAINHgFcwYd2qHaUH0O9AkXo8U+fSbrUfvBqcugV6juPrAtYDYY+wHnsXv3WWQuuYkVvHaBehTg
+        iqP2E7Gmu/2S1hih4Lqu6yQZDYVCjZVUM39R70UulzsHdBn/hWAweHnXt+yV0jXTy0Tmgk4T8GcCZtTU
+        WBff91Cnnl6iY0Z9Pt8ZPZGcw9l9r9ReNepXnN8D3BC89D11fhdI8AYRFyrtpNrLX0Nt/SQYwJ6rsUk0
+        id3l91X150EHeuz/T0r0HwBz6ySEhl1VAAAAAElFTkSuQmCC
+</value>
   </data>
-  <data name="$this.Text" xml:space="preserve">
-    <value>Авторизация</value>
+  <data name="labelLogIn.Text" xml:space="preserve">
+    <value>2Safe Вход</value>
   </data>
 </root>
